--- a/frontend/login.html
+++ b/frontend/login.html
@@ -166,7 +166,7 @@
             </div>
   
             <!-- Submit button -->
-             <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" style="text-wrap: wrap;">Login </button>
+             <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" style="text-wrap: wrap;"  id="loginButton">Login </button>
              <br>
   
             
@@ -212,7 +212,7 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
-
+  <script src="./assets/js/script.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
