--- a/frontend/service-details.html
+++ b/frontend/service-details.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Logis Bootstrap Template - Services</title>
+  <title>Services</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -41,7 +41,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logis</h1>
+        <h1>BR<span><i class="fa fa-map-marker" aria-hidden="true"></i></span>J</h1>
+
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -72,7 +73,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-lg-6 text-center">
               <h2>Services</h2>
-              <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+              <p>We handle freight services on goods by various modes of transportation, including ships, airplanes, trucks, trains, and more</p>
             </div>
           </div>
         </div>
@@ -97,33 +98,33 @@
           <div class="col-lg-4">
             <div class="services-list">
               <a href="#" class="active">Storage</a>
-              <a href="#">Logistics</a>
-              <a href="#">Cargo</a>
-              <a href="#">Trucking</a>
-              <a href="#">Packaging</a>
-              <a href="#">Warehousing</a>
+              <a href="">Logistics</a>
+              <a href="">Trucking</a>
+              <a href="">Packaging</a>
+              <a href="">Warehousing</a>
             </div>
 
-            <h4>Enim qui eos rerum in delectus</h4>
-            <p>Nam voluptatem quasi numquam quas fugiat ex temporibus quo est. Quia aut quam quod facere ut non occaecati ut aut. Nesciunt mollitia illum tempore corrupti sed eum reiciendis. Maxime modi rerum.</p>
+            <h4>DO YOU HAVE A BIKE, CAR, BICYCLE, TRUCK?</h4>
+            <p>We manage the transportation of goods through a variety of methods, such as ships, airplanes, trucks, trains, and more, as part of our freight services.</p>
           </div>
 
           <div class="col-lg-8">
             <img src="assets/img/service-details.jpg" alt="" class="img-fluid services-img">
-            <h3>Temporibus et in vero dicta aut eius lidero plastis trand lined voluptas dolorem ut voluptas</h3>
+            <h3>WHAT WE DO.</h3>
             <p>
-              Blanditiis voluptate odit ex error ea sed officiis deserunt. Cupiditate non consequatur et doloremque consequuntur. Accusantium labore reprehenderit error temporibus saepe perferendis fuga doloribus vero. Qui omnis quo sit. Dolorem architecto eum et quos deleniti officia qui.
+              Our mission is simple yet powerful – to revolutionize dispatch services by leveraging cutting-edge technology, industry best practices, and a dedicated team of professionals. We strive to be at the forefront of innovation, ensuring that our clients can rely on us to deliver their goods with precision, speed, and utmost care.
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Assumenda et porro nisi nihil nesciunt voluptatibus.</span></li>
-              <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Expedited Dispatch: Need urgent delivery? Our team is adept at handling time-sensitive shipments, ensuring your goods reach their destination promptly.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Route Optimization: We employ advanced routing algorithms to optimize delivery routes, saving you time, money, and fuel while reducing your carbon footprint.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Real-Time Tracking: Stay informed throughout the delivery process with our real-time tracking system, giving you complete visibility and peace of mind.</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>Customer Support: Our customer support team is available round-the-clock, ready to address any queries or concerns, making sure you are always supported.</span></li>
             </ul>
             <p>
-              Est reprehenderit voluptatem necessitatibus asperiores neque sed ea illo. Deleniti quam sequi optio iste veniam repellat odit. Aut pariatur itaque nesciunt fuga.
+              As a leading dispatch company, we offer a comprehensive suite of services designed to optimize your supply chain and streamline your operations. From small businesses to large enterprises,we cater to a diverse clientele, spanning various industries.
             </p>
             <p>
-              Sunt rem odit accusantium omnis perspiciatis officia. Laboriosam aut consequuntur recusandae mollitia doloremque est architecto cupiditate ullam. Quia est ut occaecati fuga. Distinctio ex repellendus eveniet velit sint quia sapiente cumque. Et ipsa perferendis ut nihil. Laboriosam vel voluptates tenetur nostrum. Eaque iusto cupiditate et totam et quia dolorum in. Sunt molestiae ipsum at consequatur vero. Architecto ut pariatur autem ad non cumque nesciunt qui maxime. Sunt eum quia impedit dolore alias explicabo ea.
+              If you are looking for a reliable dispatch company that offers seamless logistics solutions, look no further. Contact us today to discuss your requirements, and let us pave the way to a more efficient and successful future for your business.
             </p>
           </div>
 
