--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -37,7 +37,8 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logis</h1>
+        <h1>BR<span><i class="fa fa-map-marker" aria-hidden="true"></i></span>J</h1>
+
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -107,6 +108,10 @@
     font-size: 1rem;
     padding: 0.75rem 1rem;
   }
+  .img-fluid{
+    height: 150px;
+    width: 500px;
+  }
 }
 
 /* Medium devices (up to 768px) */
@@ -147,7 +152,7 @@
         
             <!-- Email input -->
             <div data-mdb-input-init class="form-outline mb-4">
-                <input type="password" placeholder="Password" id="form1Example23" class="form-control form-control-lg"/>
+                <input type="password" placeholder="Name" id="form1Example23" class="form-control form-control-lg"/>
               </div>
 
             <div data-mdb-input-init class="form-outline mb-4">
@@ -169,7 +174,7 @@
                 <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
                 <label class="form-check-label" for="form1Example3"> Remember me </label>
               </div> 
-              <a href="#!">Forgot password?</a>
+              <a href="./forgetPassword.html">Forgot password?</a>
             </div>
   
             <!-- Submit button -->
