--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Logis Bootstrap Template - About</title>
+  <title>About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -37,7 +37,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Logis</h1>
+        <h1>BR<span><i class="fa fa-map-marker" aria-hidden="true"></i></span>J</h1>
       </a>
 
       <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -79,10 +79,6 @@
     </div><!-- End Breadcrumbs -->
 <!-- =======Login content ======== -->
 
-
-
-
-
 <style>
     /* Small devices (up to 576px) */
 @media (max-width: 576px) {
@@ -106,6 +102,10 @@
   .btn-lg.btn-block {
     font-size: 1rem;
     padding: 0.75rem 1rem;
+  }
+  .img-fluid{
+    height: 200px;
+    width: 500px;
   }
 }
 
@@ -162,7 +162,7 @@
                 <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
                 <label class="form-check-label" for="form1Example3"> Remember me </label>
               </div>
-              <a href="#!">Forgot password?</a>
+              <a href="./forgetPassword.html">Forgot password?</a>
             </div>
   
             <!-- Submit button -->
