--- a/frontend/login.html
+++ b/frontend/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>About</title>
+  <title>Login</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -136,45 +136,44 @@
 
 </style>
 <section class="vh-100">
-    <div class="container py-5 h-100">
+  <div class="container py-5 h-100">
       <div class="row d-flex align-items-center justify-content-center h-100">
-        <div class="col-md-8 col-lg-7 col-xl-6">
-          <img src="./assets/img/user_dashboard.2ea4a37986c44fc1b0e2.png"
-            class="img-fluid" alt="Phone image">
-        </div>
-        <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-          <form>
-            <!-- Email input -->
-            <div data-mdb-input-init class="form-outline mb-4">
-              <input type="email" id="form1Example13" class="form-control form-control-lg" />
-              <label class="form-label" for="form1Example13">Email address</label>
-            </div>
-  
-            <!-- Password input -->
-            <div data-mdb-input-init class="form-outline mb-4">
-              <input type="password" id="form1Example23" class="form-control form-control-lg" />
-              <label class="form-label" for="form1Example23">Password</label>
-            </div>
-  
-            <div class="d-flex justify-content-around align-items-center mb-4">
-              <!-- Checkbox -->
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
-                <label class="form-check-label" for="form1Example3"> Remember me </label>
-              </div>
-              <a href="./forgetPassword.html">Forgot password?</a>
-            </div>
-  
-            <!-- Submit button -->
-             <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" style="text-wrap: wrap;"  id="loginButton">Login </button>
-             <br>
-  
-            
-          </form>
-        </div>
+          <div class="col-md-8 col-lg-7 col-xl-6">
+              <img src="./assets/img/user_dashboard.2ea4a37986c44fc1b0e2.png"
+                   class="img-fluid" alt="Phone image">
+          </div>
+          <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
+              <form>
+                  <!-- Email input -->
+                  <div data-mdb-input-init class="form-outline mb-4">
+                      <input type="email" id="form1Example13" class="form-control form-control-lg"/>
+                      <label class="form-label" for="form1Example13">Email address</label>
+                  </div>
+
+                  <!-- Password input -->
+                  <div data-mdb-input-init class="form-outline mb-4">
+                      <input type="password" id="form1Example23" class="form-control form-control-lg"/>
+                      <label class="form-label" for="form1Example23">Password</label>
+                  </div>
+
+                  <div class="d-flex justify-content-around align-items-center mb-4">
+                      <!-- Checkbox -->
+                      <div class="form-check">
+                          <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked/>
+                          <label class="form-check-label" for="form1Example3"> Remember me </label>
+                      </div>
+                      <a href="./forgetPassword.html">Forgot password?</a>
+                  </div>
+
+                  <!-- Submit button -->
+                  <button type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-lg btn-block" style="text-wrap: wrap;" id="loginButton">Login </button>
+                  <br>
+              </form>
+          </div>
       </div>
-    </div>
-  </section>
+  </div>
+</section>
+
   
 
 
@@ -193,11 +192,11 @@
 <footer class="py-3 my-4">
     <div class="container">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Services</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-muted">About</a></li>
+        <li class="nav-item"><a href="./services.html" class="nav-link px-2 text-muted">Services</a></li>
+        <li class="nav-item"><a href="https://brij.ng/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
+        <li class="nav-item"><a href="./contact.html" class="nav-link px-2 text-muted">Contact</a></li>
       </ul>
       <p class="text-center text-muted">© 2024 BRIJ.NG</p>
     </div>
