--- a/frontend/about.html
+++ b/frontend/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Logis Bootstrap Template - About</title>
+  <title>About</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -124,11 +124,11 @@
   <footer class="py-3 my-4">
     <div class="container">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Services</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Contact</a></li>
+        <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Home</a></li>
+        <li class="nav-item"><a href="./about.html" class="nav-link px-2 text-muted">About</a></li>
+        <li class="nav-item"><a href="./services.html" class="nav-link px-2 text-muted">Services</a></li>
+        <li class="nav-item"><a href="https://brij.ng/privacy-policy" class="nav-link px-2 text-muted">Privacy Policy</a></li>
+        <li class="nav-item"><a href="./contact.html" class="nav-link px-2 text-muted">Contact</a></li>
       </ul>
       <p class="text-center text-muted">© 2024 BRIJ.NG</p>
     </div>
